[package]
name = "reddit_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
log = "0.4"
pretty_env_logger = "0.4"
roux = "2.2.5"
serde = "1.0.152"
serde_json = "1.0.94"
sqlx = { version = "0.7.0-alpha.1", features = [ "runtime-tokio-rustls", "sqlite" ] }
strum = "0.24.1"
strum_macros = "0.24"
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
tokio = { version = "1.26.0", features = ["full"] }
url = "2.3.1"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
